# tpRigToolkit-config

./: .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py
tests/: test_general.py
tpRigToolkit/config/: __version__.py  _version.py
tpRigToolkit/config/development/: tpRigToolkit-core.yml  tpRigToolkit-names.yml  tpRigToolkit-naming.yml  tpRigToolkit-tools-rigbuilder-dccs-maya.yml
tpRigToolkit/config/production/: tpRigToolkit-core.yml  tpRigToolkit-tools-rigbuilder-dccs-maya.yml  tpRigToolkit-tools-rignode.yml
